--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <p>
     #30DayMapChallenge 2025 
-    <a href="https://twitter.com/jmviglino">
+    <a href="https://www.linkedin.com/in/jean-marc-viglino-87826b14b/">
       @jmviglino
     </a>
   </p>
